# pyaruco

./: Porting.ipynb  README.md  aruco100.exp  aruco100.lib  board.yml  camera.yml  caruco.exp  caruco.lib  main.py  pyaruco.py
native_build/: CMakeLists.txt
native_build/caruco/: CMakeLists.txt  board.cpp  board_configuration.cpp  board_detector.cpp  camera_parameters.cpp  caruco.h  caruco_internal.hpp  error_handling.cpp  marker.cpp  marker_detector.cpp  marker_vector.cpp
